# oceanstream

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  environment-dev.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: main.yml  python-test.yml
docs/source/: L0.rst  L2.rst  L3.rst  api_reference.rst  conf.py  contributing.rst  faq.rst  index.rst  installation.rst  introduction.rst  usage.rst
oceanstream/: cli.py  utils.py
oceanstream/L0_unprocessed_data/: __init__.py  ensure_time_continuity.py  raw_handler.py  raw_reader.py  template.py
oceanstream/L2_calibrated_data/: __init__.py  background_noise_remover.py  compute_sv.py  noise_masks.py  processed_data_io.py  processed_reader.py  sv_computation.py  sv_dataset_extension.py  sv_interpolation.py
test_data/: JR161-D20061118-T010645.raw  JR179-D20080410-T150637.raw  JR230-D20091215-T121917.raw  README.md
tests/: conftest.py  pytest.ini  test_applying_masks_handler.py  test_background_noise_remover.py  test_compute_sv.py  test_csv_export_from_raw.py  test_csv_export_from_sv.py  test_frequency_differencing_handler.py  test_ftp.py  test_mvbs_computation.py  test_nasc_computation.py  test_nasc_process.py  test_noise_mask.py  test_processed_reader.py  test_raw_handler.py  test_raw_reader.py  test_shoal_detection_handler.py  test_shoal_process.py  test_sv_computation.py  test_sv_dataset_extension.py  test_sv_interpolation.py  test_target_strength_computation.py  test_time_continuity.py  test_utils.py
(+43 files in other folders)
